Trying to set up game

--- a/index.html
+++ b/index.html
@@ -1,7 +1,17 @@
-<!DOCTYPE html>
 <html>
-<body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
-</body>
+    <head>
+    <title>Best game ever</title>
+    <meta charset="UTF-8">
+        <link rel="stylesheet" href="css/default.css">
+        <script src="lib/babylon.max.js"></script>
+        <script src="lib/cannon.js"></script>
+        <script type="module" src="js/best_game_ever.js"></script>
+    </head>
+    <body>
+        <div id="canvas-wrap">
+            <canvas id="myCanvas" width=1600 height=1200></canvas>
+            <div id="bamboosRemaining"></div>
+            <div id ="bamboosRemaining"></div>
+        </div>
+    </body>
 </html>
